--- a/public/poly_modules/my_components/content-page.html
+++ b/public/poly_modules/my_components/content-page.html
@@ -1,9 +1,9 @@
 <link rel="import" href="../bower_components/core-animated-pages/core-animated-pages.html">
 <link rel="import" href="../bower_components/core-animation/core-animation.html">
 <link rel="import" href="../bower_components/core-image/core-image.html">
-<link rel="import" href="../bower_components/core-item/core-item.html">
+<link rel="import" href="../bower_components/core-icon/core-icon.html">
 
-<polymer-element name="content-page" attributes="group groupId" horizontal layout>
+<polymer-element name="content-page" attributes="group groupId contentWidth" horizontal layout>
 <template>
 	<style>
 		:host{
@@ -11,9 +11,10 @@
 			/*position: absolute;
 			top: 0;
 			left: 0;*/
-			width: 740px;
-			height: 500px;
+			width: {{contentWidth}}px;
+			height: 700px;
 			background-color: rgba(250,250,250,1);
+			z-index: 20000;
 		}
 
 		/*#scrollWrapper {
@@ -48,25 +49,117 @@
 			margin-bottom: 23px;
 		}
 
-		.group_title {				
+		.singer {
+			font-size: 20px;
+			color: rgba(102,102,102,1);
+			margin-left: 30px;
+			margin-bottom: 10px;			
+			white-space: normal;
+		}
+
+		.title {				
 			font-size: 20px;
 			color: rgba(102,102,102,1);
 			margin-left: 30px;
 			margin-bottom: 10px;			
 			white-space: normal;
 		}		
+
+		.official {
+			font-size: 20px;
+			color: rgba(102,102,102,1);
+			margin-left: 30px;
+			margin-bottom: 10px;			
+			white-space: normal;
+		}
+
+		.upload_date {
+			font-size: 20px;
+			color: rgba(102,102,102,1);
+			margin-left: 30px;
+			margin-bottom: 10px;			
+			white-space: normal;	
+		}
+
+		.youtube_views {
+			font-size: 20px;
+			color: rgba(102,102,102,1);
+			margin-left: 30px;
+			margin-bottom: 10px;			
+			white-space: normal;		
+		}
+
+		.upvotes {
+			font-size: 20px;
+			color: rgba(102,102,102,1);
+			margin-left: 30px;
+			margin-bottom: 10px;			
+			white-space: normal;		
+		}
+
+		.downvotes {
+			font-size: 20px;
+			color: rgba(102,102,102,1);
+			margin-left: 30px;
+			margin-bottom: 10px;			
+			white-space: normal;		
+		}
+
+		.approval_rating {
+			font-size: 20px;
+			color: rgba(102,102,102,1);
+			margin-left: 30px;
+			margin-bottom: 10px;			
+			white-space: normal;		
+		}
+
+		.hotness {
+			font-size: 20px;
+			color: rgba(102,102,102,1);
+			margin-left: 30px;
+			margin-bottom: 10px;			
+			white-space: normal;		
+		}
+
+		.cheesiness{
+			font-size: 20px;
+			color: rgba(102,102,102,1);
+			margin-left: 30px;
+			margin-bottom: 10px;			
+			white-space: normal;		
+		}
 	</style>
 	<!-- <div id="scrollWrapper" vertical layout> -->
 		<div class="wrapper" flex vertical center center-justified layout hero-id="group-{{groupId}}" hero>
 			<div class="content" on-tap="{{back}}">
-				<core-image sizing="cover" src="{{group.img}}" groupId="{{groupId}}"></core-image>
-				<core-item class="group_title" groupId="{{i}}">{{group.title}}</core-item>
+				<iframe width="960" height="540" src="https://www.youtube.com/embed/MbdT7DIn1lM" frameborder="0" allowfullscreen></iframe> 
+				<!-- <core-image sizing="cover" src="{{group.img}}" groupId="{{groupId}}"></core-image> -->
+				<div class="details" vertical layout>
+					<div horizontal layout>
+						<div class="singer">{{group.singer}}</div>
+						<div class="title" groupId="{{i}}">{{group.title}}</div>
+						<template if="{{group.official}}">
+							<div class="official">Official Music Video</div>
+						</template>
+					</div>
+					<div horizontal layout>
+						<div class="upload_date">{{group.upload_date}}</div>
+						<div class="youtube_views"><core-icon icon="visibility"></core-icon>{{group.youtube_views}}</div>
+						<div class="upvotes"><core-icon icon="thumb-up"></core-icon>{{group.upvotes}}</div>
+						<div class="downvotes"><core-icon icon="thumb-down"></core-icon>{{group.downvotes}}</div>
+						<div class="approval_rating"><core-icon icon="face"></core-icon>{{group.approval_rating}}</div>
+					</div>
+					<div horizontal layout>
+						<div class="hotness">{{group.hotness}}</div>
+						<div class="cheesiness">{{group.cheesiness}}</div>
+					</div>
+				</div>
 			</div>
 		</div>
 	<!-- </div> -->
 </template>
 <script>
-	Polymer('content-page', {		
+	Polymer('content-page', {				
 
 		created: function() {
 
