--- a/public/poly_modules/my_components/left-menu.html
+++ b/public/poly_modules/my_components/left-menu.html
@@ -5,6 +5,7 @@
 <link rel="import" href="../bower_components/paper-dropdown-menu/paper-dropdown-menu.html">
 <link rel="import" href="../bower_components/paper-dropdown/paper-dropdown.html">
 <link rel="import" href="../bower_components/paper-item/paper-item.html">
+<link rel="import" href="../bower_components/paper-toggle-button/paper-toggle-button.html">
 
 <polymer-element name="left-menu" vertical layout>
 <template>
@@ -12,23 +13,102 @@
 		:host {
 
 		}
+
+		core-menu div{
+			margin: 10px;
+		}
 	</style>
 	<core-toolbar>Filters</core-toolbar>
 	<core-menu>
-		<paper-dropdown-menu label="Artists">
-		    <paper-dropdown class="dropdown">
-		        <core-menu class="menu">
-		            <paper-item>Bigbang</paper-item>
-		            <paper-item>AOA</paper-item>
-		            <paper-item>2ne1</paper-item>
-		            <paper-item>abcd</paper-item>
-		        </core-menu>
-		    </paper-dropdown>
-		</paper-dropdown-menu>
-		<core-item icon="settings" label="item1"></core-item>
+		<div horizontal layout>
+			<div>Artist</div>
+			<paper-dropdown-menu label="All">
+			    <paper-dropdown class="dropdown">
+			        <core-menu class="menu">
+			            <paper-item>All</paper-item>
+			            <paper-item>Girls' Generation</paper-item>
+			            <paper-item>Psy</paper-item>		     
+			        </core-menu>
+			    </paper-dropdown>
+			</paper-dropdown-menu>
+		</div>
+		<div horizontal layout>
+			<div>Gender</div>
+			<paper-dropdown-menu label="All">
+			    <paper-dropdown class="dropdown">
+			        <core-menu class="menu">
+			            <paper-item>All</paper-item>
+			            <paper-item>Female</paper-item>
+			            <paper-item>Male</paper-item>		     
+			        </core-menu>
+			    </paper-dropdown>
+			</paper-dropdown-menu>
+		</div>
+		<div horizontal layout>
+			<div>Number of Singers</div>
+			<paper-dropdown-menu label="All">
+			    <paper-dropdown class="dropdown">
+			        <core-menu class="menu">
+			            <paper-item>1</paper-item>
+			            <paper-item>2</paper-item>
+			            <paper-item>3</paper-item>
+			            <paper-item>4</paper-item>
+			            <paper-item>5</paper-item>
+			            <paper-item>6</paper-item>
+			            <paper-item>7+</paper-item>		     
+			        </core-menu>
+			    </paper-dropdown>
+			</paper-dropdown-menu>
+		</div>
+		<div horizontal layout>
+			<div>Video Type</div>
+			<paper-dropdown-menu label="All">
+			    <paper-dropdown class="dropdown">
+			        <core-menu class="menu">
+			            <paper-item>All</paper-item>
+			            <paper-item>Music Video</paper-item>
+			            <paper-item>Live Performance</paper-item>
+			            <paper-item>Dance Practice</paper-item>			            
+			        </core-menu>
+			    </paper-dropdown>
+			</paper-dropdown-menu>
+		</div>
+		<div horizontal layout>
+			<div>English Subtitle Only</div>
+			<paper-toggle-button></paper-toggle-button>
+		</div>
+		<div horizontal layout>
+			<div>Official Video Only</div>
+			<paper-toggle-button></paper-toggle-button>
+		</div>
+		<div horizontal layout>
+			<div>HD Video Only</div>
+			<paper-toggle-button></paper-toggle-button>
+		</div>
+		<div horizontal layout>
+			<div>Year Uploaded</div>
+			<paper-slider min="10" max="200" value="110"></paper-slider>
+		</div>
+		<div horizontal layout>
+			<div>English Lyric Percentage</div>
+			<paper-slider min="10" max="200" value="110"></paper-slider>
+		</div>
+		<div horizontal layout>
+			<div>sexiness</div>
+			<paper-slider min="10" max="200" value="110"></paper-slider>
+		</div>
+		<div horizontal layout>
+			<div>Cheesiness</div>
+			<paper-slider min="10" max="200" value="110"></paper-slider>
+		</div>
+		<div horizontal layout>
+			<div>Approval Rating</div>
+			<paper-slider min="10" max="200" value="110"></paper-slider>
+		</div>
+		<!-- <core-item icon="settings" label="item1"></core-item>
 		<paper-slider min="10" max="200" value="110"></paper-slider>
 		<core-item icon="settings" label="item2"></core-item>
-		<paper-interval-slider min="10" max="200" valueA="110" valueB="180" pin="true"></paper-interval-slider>
+		<paper-interval-slider min="10" max="200" valueA="110" valueB="180" pin="true"></paper-interval-slider> -->
 	</core-menu>	
 </template>
 <script>
