--- a/public/poly_modules/my_components/main-cards.html
+++ b/public/poly_modules/my_components/main-cards.html
@@ -1,9 +1,11 @@
 <link rel="import" href="../bower_components/core-animated-pages/core-animated-pages.html">
 <link rel="import" href="../bower_components/core-image/core-image.html">
 <link rel="import" href="../bower_components/core-item/core-item.html">
+<link rel="import" href="../bower_components/paper-dropdown-menu/paper-dropdown-menu.html">
+<link rel="import" href="../bower_components/paper-dropdown/paper-dropdown.html">
 <link rel="import" href="../my_components/content-page.html">
 
-<polymer-element name="main-cards" attributes="groups" center-justified horizontal layout>
+<polymer-element name="main-cards" attributes="groups fireToggle" center-justified vertical layout>
 <template>
 	<style>
 		:host {
@@ -12,9 +14,18 @@
 			margin: 0 auto;
 		}
 
+		.header-panel {
+			position: absolute;
+			width: 100%;
+			height: 100px;
+			top: 0;			
+		}
+
 		.main-panel {				
+			position: absolute;
 			width: 100%;
 			height: 100%;
+			top: 100px;
 		}
 
 		core-animated-pages {
@@ -92,11 +103,27 @@
 		content-page {
 			position: absolute;
 			top: 0;				
-			right: -740px;
-		}
+			right: -1100px;
+		}		
 	</style>
+	<div class="header-panel">									
+		<paper-dropdown-menu label="Sort">
+		    <paper-dropdown class="dropdown">
+		        <core-menu class="menu">
+		            <paper-item>Default</paper-item>
+		            <paper-item>Sexiness</paper-item>
+		            <paper-item>Cheesiness</paper-item>		    
+		            <paper-item>Approval Rating</paper-item>
+		            <paper-item>Youtube Views</paper-item>
+		            <paper-item>Most Recent First</paper-item>
+		            <paper-item>Oldest First</paper-item>
+		        </core-menu>
+		    </paper-dropdown>
+		</paper-dropdown-menu>				
+	</div>
 	<div class="main-panel" center-justified vertical layout>
-		<!-- <core-animated-pages flex selected="{{selected}}" transitions="hero-transition" on-core-animated-pages-transition-end="{{transitionend}}"> -->
+		<!-- <core-animated-pages flex selected="{{selected}}" transitions="hero-transition" on-core-animated-pages-transition-end="{{transitionend}}"> -->			
+
 			<section vertical layout>
 				<div id="noscroll" fit hero-p>
 					<div class="item-list" flex horizontal around-justified layout wrap>			
@@ -112,7 +139,7 @@
 		
 		<!-- </core-animated-pages> -->
 	</div>
-	<content-page id="contentPage" on-content-back="{{changePage}}" group="{{selectedGroup}}" groupId="{{group_id}}"></content-page> 
+	<content-page id="contentPage" on-content-back="{{changePage}}" group="{{selectedGroup}}" groupId="{{group_id}}" contentWidth="{{contentWidth}}"></content-page> 	
 </template>
 <script>
 	Polymer('main-cards', {
@@ -121,7 +148,9 @@
 		groups: [],			
 		selectedGroup: [],
 		player: false,
-		isOpened: true,		
+		isOpened: true,	
+		contentWidth: 1100,	
+		fireToggle: true,
 
 		created: function() {
 			this.groups = [];
@@ -141,6 +170,10 @@
 
 		transitionend: function(e) {
 
+		},
+
+		fireToggleChanged: function() {
+			this.changePage();
 		},
 
 		changePage: function() {
@@ -166,15 +199,17 @@
 			animation.easing = "ease-in-out";
 			animation.keyframes = [
 				{right: "0px"},
-				{right: "-740px"}
+				{right: "-1100px"}
 			];
 			animation.fill = "forwards";
 			if(this.isOpened){
 				animation.direction = "reverse";
-				this.isOpened = false;
+				this.isOpened = false;			
+				this.fire('show-content');
 			} else {
 				animation.direction = "normal";
-				this.isOpened = true;
+				this.isOpened = true;				
+				this.fire('hide-content');
 			}						
 			animation.target = this.$.contentPage;
 			this.player = animation.play();			
