--- a/public/poly_modules/my_components/left-menu.html
+++ b/public/poly_modules/my_components/left-menu.html
@@ -87,15 +87,15 @@
 		</div>
 		<div horizontal layout>
 			<div>Year Uploaded</div>
-			<paper-slider min="10" max="200" value="110"></paper-slider>
+			<paper-interval-slider min="10" max="200" valueA="110" valueB="180" step="5" pin snaps></paper-interval-slider>
 		</div>
 		<div horizontal layout>
 			<div>English Lyric Percentage</div>
-			<paper-slider min="10" max="200" value="110"></paper-slider>
+			<paper-interval-slider min="10" max="200" valueA="110" valueB="180" step="5" pin snaps></paper-interval-slider>
 		</div>
 		<div horizontal layout>
 			<div>sexiness</div>
-			<paper-slider min="10" max="200" value="110"></paper-slider>
+			<paper-interval-slider min="10" max="200" valueA="110" valueB="180" step="5" pin snaps></paper-interval-slider>
 		</div>
 		<div horizontal layout>
 			<div>Cheesiness</div>
