--- a/public/poly_modules/my_components/list-cards.html
+++ b/public/poly_modules/my_components/list-cards.html
@@ -1,7 +1,7 @@
 <link rel="import" href="../my_components/content-page.html">
 <link rel="import" href="../my_components/video-card.html">
 
-<polymer-element name="list-cards" attributes="groups fireToggle" center-justified vertical layout>
+<polymer-element name="list-cards" attributes="groups fireToggle cardWidth" center-justified vertical layout>
 <template>
 	<style>
 		:host {
@@ -15,7 +15,7 @@
 			position: absolute;
 			width: 100%;
 			height: 100%;
-			top: 100px;
+			top: 0px;
 		}		
 
 		 #noscroll {
