--- a/public/poly_modules/my_components/view-menu-box.html
+++ b/public/poly_modules/my_components/view-menu-box.html
@@ -25,7 +25,10 @@
 <script>
 	Polymer('view-menu-box', {
 		selectedLevel: 0,
-		cardWidth: 320,
+
+		publish: {
+			cardWidth: 320
+		},	
 
 		created: function() {
 
