--- a/public/poly_modules/index.html
+++ b/public/poly_modules/index.html
@@ -6,9 +6,15 @@
   		<meta name="mobile-web-app-capable" content="yes">
   		<meta name="apple-mobile-web-app-capable" content="yes">
 		<script src="bower_components/webcomponentsjs/webcomponents.js"></script>
-		<link rel="import" href="bower_components/polymer/polymer.html">
-		<link rel="import" href="bower_components/core-scaffold/core-scaffold.html">					
-		<link rel="import" href="bower_components/core-header-panel/core-header-panel.html">
+		<link rel="import" href="bower_components/polymer/polymer.html">					
+		<link rel="import" href="bower_components/core-header-panel/core-header-panel.html">	
+		<link rel="import" href="bower_components/core-icon-button/core-icon-button.html">	
+		<link rel="import" href="bower_components/core-menu-button/core-menu-button.html">
+		<link rel="import" href="bower_components/core-menu/core-menu.html">
+		<link rel="import" href="bower_components/core-item/core-item.html">
+		<link rel="import" href="bower_components/core-dropdown/core-dropdown.html">	
+		<link rel="import" href="bower_components/core-field/core-field.html">
+		<link rel="import" href="bower_components/paper-input/paper-input.html">
 		<link rel="import" href="my_components/main-cards.html">
 		<link rel="import" href="my_components/left-menu.html">	
 		<link rel="import" href="my_components/my-page.html">	
@@ -22,32 +28,60 @@
 				font-family: sans-serif;				
 			}
 
-			core-animated-pages {
-				width: 100%;
-				height: 100%;
+			#btnDrawer.close{
+				position: fixed;
+				top: 35px;
+				left: 200px;
+				color: rgb(255,255,255);
 			}
 
-			core-scaffold {
-				position: absolute;
+			#btnDrawer.open{
+				position: fixed;
+				top: 35px;
+				left: 10px;
+			}
+
+			#leftPanel {							
+				width: 310px;
+				height: 100%;
+				background: rgb(48,64,79);
+				color: rgb(255,255,255);
+			}
+
+			#leftPanel core-toolbar {
+				background: rgb(48,64,79);
+			}
+
+			#leftPanel h1 {
+				margin-left: 20px;
+				font-size: 40px;
+				font-weight: normal;
+			}
+
+			#mainPanel {				
 				top: 0;
-				right: 0;
-				bottom: 0;
-				left: 0;
+				width: 100%;
+				height: 100%;
+				margin-left: 40px;
+			}
+
+			#mainPanel core-toolbar {
+				height: 93px;
+				margin-top: 20px;
+			}
+
+			#mainPanel h2 {
+				font-size: 26px;
+				font-weight: bold;
+				font-style: italic;
+				color: rgb(48,64,79);				
 			}
 
 			.content {
 				background-color: #fff;
 				height: 3000px;
 				padding: 20px;
-			}
-
-			core-scaffold[mode=cover]::shadow core-header-panel::shadow #mainContainer {
-				left: 120px;				
-			}
-
-			core-scaffold[mode=cover] .content {
-				margin: 20px 100px 20px 0;
-			}	
+			}			
 
 			#shadowWrapper1 {
 				position: absolute;
@@ -72,35 +106,80 @@
 	</head>
 	<body unresolved>
 		<template id="temp_app" is="auto-binding">			
-			<section>
-				<core-scaffold>					
-					<core-header-panel navigation flex mode="seamed">
+			<section>				
+				<div horizontal layout fit>
+					<core-header-panel id="leftPanel">
+						<core-toolbar horizontal layout>
+							<h1>Filters</h1>													
+						</core-toolbar>
 						<left-menu></left-menu>											
 						<div id="shadowWrapper1" hidden></div>
 					</core-header-panel>
 
-					<div tool>Top header</div>
+					<core-header-panel id="mainPanel">
+						<core-toolbar>
+							<div horizontal layout>
+								<h2>K-pop tv</h2>
+								<div flex></div>
+								<core-field>
+									<paper-input label="search" flex></paper-input>
+									<core-icon icon="search"></core-icon>
+								</core-field>
 
-					<div class="content">
-						<!-- <main-cards groups="{{groups}}" fireToggle="{{fireToggle}}" touch-action="auto"></main-cards> -->
-						<my-page groups="{{groups}}"></my-page>
-					</div>					
-					<div id="shadowWrapper2" hidden></div>
-				</core-scaffold>			
+								<!-- <core-menu-button>
+									<core-icon-button id="btnProfile" icon="menu"></core-icon-button>	
+									<core-dropdown class="dropProfile">
+										<core-menu>
+											<core-item>Profile</core-item>
+											<core-item>Logout</core-item>
+										</core-menu>
+									</core-dropdown>
+								</core-menu-button> -->
+							</div>
+						</core-toolbar>						
+						<div class="content">
+							<main-cards groups="{{groups}}" fireToggle="{{fireToggle}}" touch-action="auto"></main-cards>
+							<!-- <my-page groups="{{groups}}" fireToggle="{{fireToggle}}"></my-page> -->
+						</div>
+						<div id="shadowWrapper2" hidden></div>													
+					</core-header-panel>					
+				</div>				
+				<core-icon-button id="btnDrawer" class="close" icon="close"></core-icon-button>	
 			</section>			
-			<script>
+			<script>				
+				var isDrawerOpened = true;
+				var leftPanel = document.querySelector('#leftPanel');
+				var btnDrawer = document.querySelector('#btnDrawer');				
+				btnDrawer.addEventListener('click', function() {										
+					if(isDrawerOpened){
+						leftPanel.setAttribute("hidden", null);
+						btnDrawer.className = "open";
+						btnDrawer.icon = "add";
+						isDrawerOpened = false;	
+					} else {
+						leftPanel.removeAttribute("hidden");
+						btnDrawer.className = "close";
+						btnDrawer.icon = "close";
+						isDrawerOpened = true;	
+					}					
+				});
+
 				var main_cards = document.querySelector('main-cards');
+				var my_page = document.querySelector('my-page');				
+
 				var shadowWrapper1 = document.querySelector("#shadowWrapper1");				
 				var shadowWrapper2 = document.querySelector("#shadowWrapper2");
 				shadowWrapper1.addEventListener("click", function() {
 					shadowWrapper1.setAttribute("hidden", null);
 					shadowWrapper2.setAttribute("hidden", null);
 					main_cards.fireToggle = !main_cards.fireToggle;
+					my_page.fireToggle = !my_page.fireToggle;
 				});
 				shadowWrapper2.addEventListener("click", function() {
 					shadowWrapper1.setAttribute("hidden", null);
 					shadowWrapper2.setAttribute("hidden", null);
 					main_cards.fireToggle = !main_cards.fireToggle;
+					my_page.fireToggle = !my_page.fireToggle;
 				});
 
 				main_cards.addEventListener('hide-content', function(e) {
@@ -111,6 +190,15 @@
 					shadowWrapper1.removeAttribute("hidden");
 					shadowWrapper2.removeAttribute("hidden");
 				});	
+				
+				// my_page.addEventListener('hide-content', function(e) {
+				// 	shadowWrapper1.setAttribute("hidden", null);
+				// 	shadowWrapper2.setAttribute("hidden", null);
+				// });
+				// my_page.addEventListener('show-content', function(e) {
+				// 	shadowWrapper1.removeAttribute("hidden");
+				// 	shadowWrapper2.removeAttribute("hidden");
+				// });									
 				
 			</script>	
 		</template>
