--- a/public/poly_modules/my_components/view-menu-box.html
+++ b/public/poly_modules/my_components/view-menu-box.html
@@ -9,11 +9,12 @@
 		}
 
 		core-selector {			
-			margin: 10px;
+			margin-top: 10px;
+			margin-right: 15px;
 		}		
 
 		core-icon-button {			
-			margin: 10px;
+			margin-right: 5px;
 		}
 	</style>
 	<core-selector id="selector" selected="0" on-core-activate="{{levelBtnSelected}}">	
